--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
       content="Shopping App"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- google-font rubik -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <!-- bootstrap -->
     <link 
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" 
       rel="stylesheet"
